--- a/main.css
+++ b/main.css
@@ -100,7 +100,8 @@
     transition: transform 0.5s;
 }
 .content-img:hover{
-   transform: scaleZ(110%);
+   -webkit-transform: scaleZ(110%);
+    transform: scaleZ(110%);
 }
 
 .content-text h4{
