--- a/main.css
+++ b/main.css
@@ -100,8 +100,8 @@
     transition: transform 0.5s;
 }
 .content-img:hover{
-   -webkit-transform: scaleZ(110%);
-    transform: scaleZ(110%);
+   -webkit-transform: scale(110%);
+    transform: scale(110%);
 }
 
 .content-text h4{
