--- a/gallery.css
+++ b/gallery.css
@@ -13,13 +13,13 @@ h1{
     font-size: 3.5rem;
     font-weight: 200;
     color: rgb(255, 255, 255);
+    padding: 80px 0;
     text-align: center;
     background-color: rgb(0, 187, 9);
 }
 .gallery-content{
     max-width: 300px;
     max-height: 300px;
-
     position: relative;
     overflow: hidden;
 }
@@ -53,6 +53,7 @@ h1{
 }
 .gallery-content:hover .gallery-img{
     transform: scale(120%);
+    -webkit-transform: scale(120%);
 }
 .gallery-content:hover .gallery-text>p{
    transform: translateY(-50%);
