--- a/gallery.css
+++ b/gallery.css
@@ -19,7 +19,7 @@ h1{
 }
 .gallery-content{
     max-width: 300px;
-    max-height: 300px;
+    height: 300px;
     position: relative;
     overflow: hidden;
 }
@@ -52,11 +52,10 @@ h1{
     color: white;
 }
 .gallery-content:hover .gallery-img{
-    transform: scale(120%);
-    -webkit-transform: scale(120%);
+    transform: scale(1.2);
 }
 .gallery-content:hover .gallery-text>p{
-   transform: translateY(-50%);
+    transform: translateY(-50%);
 }
 @media screen and (max-width: 1000px){
     .gallery-container{
