--- a/contact.css
+++ b/contact.css
@@ -1,6 +1,6 @@
 section h1{
-    padding: 80px 0;
-    background-color: rgb(133, 221, 1);
+    padding: 60px 0;
+    background-color: #0ed30e;
     color: white;
     font-size: 3.5rem;
     font-weight: 300;
@@ -10,44 +10,50 @@ section h1{
     display: flex;
     justify-content: space-between;
     max-width: 1000px;
-    margin: 0 auto;
+    margin: 100px auto;
+}
+.info{
+    display: flex;
+    align-items: flex-start;
+    margin-bottom: 30px;
+}
+.company-icon{
+    width: 80px;
+    height: 80px;
+    margin-right: 30px;
 }
 .company-contact{
-    width: 500px;
+    width: 400px;
 }
 .company-email{
-    width: 220px;
+    width: 180px;
     height: 40px;
-    margin: 20px 0;
+    margin: 10px 0;
     border-radius: 4px;
     border: rgba(0, 0, 0, 0.3) 1px solid;
     float: left;
 }
 .company-name{
     height: 40px;
-    width: 220px;
+    width: 180px;
     float: right;
     border-radius: 4px;
     border: rgba(0, 0, 0, 0.3) 1px solid;
-
-    margin: 20px 0;
-
+    margin: 10px 0;
 }
 .subject{
     width: 100%;
-    margin: 20px 0;
+    margin: 10px 0;
     height: 40px;
     border-radius: 4px;
     border: rgba(0, 0, 0, 0.3) 1px solid;
-
 }
 #message{
-    margin: 20px 0;
+    margin: 10px 0;
     width: 100%;
     height: 100px;
     border-radius: 4px;
     border: rgba(0, 0, 0, 0.3) 1px solid;
-
 }
 .comp-title{
     font-weight: 600;
@@ -55,6 +61,11 @@ section h1{
 }
 .details{
     list-style: none; 
+}
+.details li{
+    margin-bottom: 5px;
+    font-size: 0.8rem;
+    color: rgb(56, 56, 56);
 }
 li>span{
     font-weight: 600;
@@ -67,8 +78,27 @@ input, textarea{
 textarea{
     padding-top: 5px;
 }
+#submit-btn{
+    width: 150px;
+    height: 40px;
+    background-color: #0ed30e;
+    border-radius: 4px;
+    border: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-size: 1.1rem;
+    transition: 0.2s;
+}
+#submit-btn:hover{
+    background-color: #19fa19;
+}
 #map{
-    width: 1200px;
-    height: 500px;
-    margin: 0 auto;
+    max-width: 1000px;
+    width: 70%;
+    max-height: 500px;
+    height: 60vh;
+    margin: auto;
+    margin-top: 50px;
 }
