--- a/contact.css
+++ b/contact.css
@@ -11,6 +11,7 @@ section h1{
     justify-content: space-between;
     max-width: 1000px;
     margin: 100px auto;
+    padding: 0 30px;
 }
 .info{
     display: flex;
@@ -23,10 +24,11 @@ section h1{
     margin-right: 30px;
 }
 .company-contact{
-    width: 400px;
+    max-width: 400px;
 }
 .company-email{
-    width: 180px;
+    max-width: 180px;
+    width: 45%;
     height: 40px;
     margin: 10px 0;
     border-radius: 4px;
@@ -35,7 +37,8 @@ section h1{
 }
 .company-name{
     height: 40px;
-    width: 180px;
+    max-width: 180px;
+    width: 45%;
     float: right;
     border-radius: 4px;
     border: rgba(0, 0, 0, 0.3) 1px solid;
@@ -96,9 +99,24 @@ textarea{
 }
 #map{
     max-width: 1000px;
-    width: 70%;
+    width: 90%;
     max-height: 500px;
     height: 60vh;
     margin: auto;
     margin-top: 50px;
+}
+@media screen and (max-width: 1000px){
+    .contact-container{
+        flex-direction: column;
+    }
+    section h1{
+        padding: 20px 0;
+        font-size: 2rem;
+    }
+    .contact-container{
+        margin: 50px 0;
+    }
+    li span{
+        font-size: 1rem;
+    }
 }
