--- a/common.css
+++ b/common.css
@@ -23,7 +23,7 @@ a{
 .logo-name1{
     display: inline-block;
     padding: 0 8px;
-    background-color: black;
+    background-color: #63c500;
     color: white;
     font-size: 2rem;
     letter-spacing: 1.5px;
