--- a/main.css
+++ b/main.css
@@ -185,6 +185,9 @@ hr{
     border: 0;
     margin: 80px 0;
 }
+.blog{
+    margin-bottom: 250px;
+}
 .blog h3{
     text-align: center;
     padding: 80px 0;
